--- a/frontend/src/Pages/CSS/LoginSignUp.css
+++ b/frontend/src/Pages/CSS/LoginSignUp.css
@@ -55,3 +55,25 @@
 Link{
     text-decoration: none;
 }
+
+#file{
+
+    display: none;
+}
+
+.avatar-image{
+    width:1.8rem;
+    height: 1.8rem;
+    cursor: pointer;
+}
+
+.texter{
+    font-size: 10px;
+    font-weight: 600;
+    align-items: center;
+    display: flex;
+    color:#a7bcff;
+    margin-left: 0.5rem;
+    cursor: pointer;
+
+}
